--- a/Hotel/src/main/resources/application.properties
+++ b/Hotel/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=hotel-service
-server.port=8082
+server.port=8080
 #H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 #eureka registration
-eureka.client.server-url.default-zone=http://localhost:8761/eureka-server
+eureka.client.server-url.default-zone=http://discovery:8761/eureka
 eureka.client.register-with-eureka=true
 
 #configServer
