--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -5,22 +5,22 @@ services:
     ports:
       - "8761:8761"
     image: "discovery-server"
-  candidate_B:
-    build:  ../Candidate
+  hotel_A:
+    build:  ../Hotel
     environment: 
       - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
       - spring.cloud.config.uri=http://config:8888
     ports:
-      - "3000:8080"
-    image: "candidate-service"
-  candidate_C:
-    build:  ../Candidate
+      - "8080:8080"
+    image: "hotel-service"
+  hotel_B:
+    build:  ../Hotel
     environment: 
       - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
       - spring.cloud.config.uri=http://config:8888
     ports:
-      - "3001:8080"
-    image: "candidate-service"
+      - "8081:8080"
+    image: "hotel-service"
   config:
     build: ../config-server
     command: --spring.profiles.active=native --spring.cloud.config.server.native.searchLocations=/config
