--- a/gateway-server/src/main/resources/application.properties
+++ b/gateway-server/src/main/resources/application.properties
@@ -10,3 +10,6 @@ eureka.client.fetchRegistry=true
 zuul.routes.hotel-service.serviceId=hotel-service
 zuul.routes.hotel-service.path=/hotel-service/*
 
+#spring security
+spring.security.user.name=user
+spring.security.user.password=user
