feat: Flight Microservice CRUD

--- a/Flight/src/main/resources/application.properties
+++ b/Flight/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.application.name=flight-service
+server.port=8085
+#H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:file:./Database/Data/Flights;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+
+#eureka registration
+eureka.client.server-url.default-zone=http://discovery:8761/eureka
+eureka.client.register-with-eureka=true
 
