--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -19,6 +19,13 @@ services:
     ports:
       - "8081:8081"
     image: "hotel-service"
+  flight_A:
+    build:  ../Flight
+    environment: 
+      - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
+    ports:
+      - "8085:8085"
+    image: "flight-service"
   gateway:
     build: ../gateway-server
     environment: 
