--- a/gateway-server/src/main/resources/application.properties
+++ b/gateway-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=gateway-service
 server.port=8762
 #eureka config
-eureka.client.serviceUrl.defaultZone= http://discovery:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
 eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
@@ -9,6 +9,9 @@ eureka.client.fetchRegistry=true
 
 zuul.routes.hotel-service.serviceId=hotel-service
 zuul.routes.hotel-service.path=/hotel-service/*
+
+zuul.routes.flight-service.serviceId=flight-service
+zuul.routes.flight-service.path=/flight-service/*
 
 #spring security
 spring.security.user.name=user
