--- a/gateway-server/src/main/resources/application.properties
+++ b/gateway-server/src/main/resources/application.properties
@@ -13,6 +13,9 @@ zuul.routes.hotel-service.path=/hotel-service/*
 zuul.routes.flight-service.serviceId=flight-service
 zuul.routes.flight-service.path=/flight-service/*
 
+zuul.routes.excursion-service.serviceId=excursion-service
+zuul.routes.excursion-service.path=/excursion-service/*
+
 #spring security
 spring.security.user.name=user
 spring.security.user.password=user
