add excursion interfaces

--- a/Flight/src/main/resources/application.properties
+++ b/Flight/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.client.server-url.default-zone=http://discovery:8761/eureka
 eureka.client.register-with-eureka=true
 
+
+springdoc.api-docs.path=/api-docs
