--- a/Excursion/src/main/resources/application.properties
+++ b/Excursion/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.client.server-url.default-zone=http://discovery:8761/eureka
 eureka.client.register-with-eureka=true
 
+springdoc.api-docs.path=/api-docs
+
 #configServer
 #spring.cloud.config.enabled=true
 #spring.cloud.config.uri=http://localhost:8888
