--- a/Hotel/src/main/resources/application.properties
+++ b/Hotel/src/main/resources/application.properties
@@ -17,3 +17,5 @@ eureka.client.register-with-eureka=true
 #spring.cloud.config.enabled=true
 #spring.cloud.config.uri=http://localhost:8888
 #spring.config.import=optional:configserver:http://config:8888/
+
+springdoc.api-docs.path=/api-docs
