--- a/Excursion/src/main/resources/application.properties
+++ b/Excursion/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.settings.web-allow-others=true
 
 #eureka registration
 eureka.client.server-url.default-zone=http://discovery:8761/eureka
