--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -21,6 +21,11 @@ services:
     image: "hotel-service"
   flight_A:
     build:  ../Flight
+    command: --spring.datasource.url=jdbc:h2:file:./Database/Data/Flights;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+    volumes:
+      - type: bind
+        source: ./src/Database
+        target: /flight_A
     environment: 
       - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
     ports:
