--- a/Booking/package.json
+++ b/Booking/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "eureka-js-client": "^4.5.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
-    "mongoose": "^5.12.1"
+    "mongoose": "^5.12.1",
+    "swagger-ui-express": "^4.1.6"
   }
 }
