--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -21,11 +21,6 @@ services:
     image: "hotel-service"
   flight_A:
     build:  ../Flight
-    command: --spring.datasource.url=jdbc:h2:file:./Database/Data/Flights;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
-    volumes:
-      - type: bind
-        source: ./src/Database
-        target: /flight_A
     environment: 
       - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
     ports:
@@ -38,6 +33,13 @@ services:
     ports:
       - "8087:8087"
     image: "excursion-service"
+  booking_A:
+    build:  ../Booking
+    environment: 
+      - EUREKA=discovery
+    ports:
+      - "3007:3007"
+    image: "booking-service"
   gateway:
     build: ../gateway-server
     environment: 
